--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_API_URL=https://react-final-be-k0ue.onrender.com/api
-VITE_API_URL=http://localhost:8080/api
+VITE_API_URL=https://react-final-be-k0ue.onrender.com/api
+# VITE_API_URL=http://localhost:8080/api
