--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.18",
+    "@mui/x-data-grid": "^6.18.3",
+    "@mui/x-data-grid-generator": "^6.18.3",
     "@mui/x-date-pickers": "^6.18.1",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
