--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-data-grid-generator": "^6.18.3",
     "@mui/x-date-pickers": "^6.18.1",
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
     "i18next": "^23.7.11",
     "query-string": "^8.1.0",
