--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
     "react-router-dom": "^6.19.0",
+    "socket.io-client": "^4.7.2",
     "swr": "^2.2.4"
   },
   "devDependencies": {
