--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@mui/x-data-grid-generator": "^6.18.3",
     "@mui/x-date-pickers": "^6.18.1",
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
+    "i18next": "^23.7.11",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-router-dom": "^6.19.0",
+    "socket.io-client": "^4.7.2",
     "swr": "^2.2.4"
   },
   "devDependencies": {
