--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next": "^23.7.11",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
     "react-router-dom": "^6.19.0",
