--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-i18next": "^13.5.0",
     "react-router-dom": "^6.19.0",
     "socket.io-client": "^4.7.2",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
